--- a/manual/index.html
+++ b/manual/index.html
@@ -56,7 +56,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on December 3, 2022.</p>
+  Desktop</strong> and was last updated on December 4, 2022.</p>
   <div class="top" id="Top">
     <div class="header">
       <p>Next: <a href="Copyright.html" accesskey="n" rel=
@@ -580,21 +580,27 @@
                       "dtk_002dspeak.html#dtk_002dnotify_002dstop"
                       name="toc-dtk_002dnotify_002dstop">12.5.1.5
                       dtk-notify-stop</a></li>
+                      <li><a id="toc-dtk_002dorg_002dfold_002dmode"
+                      href=
+                      "dtk_002dspeak.html#dtk_002dorg_002dfold_002dmode"
+                      name=
+                      "toc-dtk_002dorg_002dfold_002dmode">12.5.1.6
+                      dtk-org-fold-mode</a></li>
                       <li><a id="toc-dtk_002dreset_002dstate" href=
                       "dtk_002dspeak.html#dtk_002dreset_002dstate"
-                      name="toc-dtk_002dreset_002dstate">12.5.1.6
+                      name="toc-dtk_002dreset_002dstate">12.5.1.7
                       dtk-reset-state</a></li>
                       <li><a id="toc-dtk_002dselect_002dserver"
                       href=
                       "dtk_002dspeak.html#dtk_002dselect_002dserver"
-                      name="toc-dtk_002dselect_002dserver">12.5.1.7
+                      name="toc-dtk_002dselect_002dserver">12.5.1.8
                       dtk-select-server</a></li>
                       <li><a id=
                       "toc-dtk_002dset_002dcharacter_002dscale"
                       href=
                       "dtk_002dspeak.html#dtk_002dset_002dcharacter_002dscale"
                       name=
-                      "toc-dtk_002dset_002dcharacter_002dscale">12.5.1.8
+                      "toc-dtk_002dset_002dcharacter_002dscale">12.5.1.9
                       dtk-set-character-scale</a></li>
                       <li><a id=
                       "toc-dtk_002dset_002dchunk_002dseparator_002dsyntax"
@@ -602,17 +608,17 @@
                       "dtk_002dspeak.html#dtk_002dset_002dchunk_002dseparator_002dsyntax"
                       name=
                       "toc-dtk_002dset_002dchunk_002dseparator_002dsyntax">
-                      12.5.1.9
+                      12.5.1.10
                       dtk-set-chunk-separator-syntax</a></li>
                       <li><a id="toc-dtk_002dset_002dlanguage"
                       href="dtk_002dspeak.html#dtk_002dset_002dlanguage"
-                      name="toc-dtk_002dset_002dlanguage">12.5.1.10
+                      name="toc-dtk_002dset_002dlanguage">12.5.1.11
                       dtk-set-language</a></li>
                       <li><a id=
                       "toc-dtk_002dset_002dnext_002dlanguage" href=
                       "dtk_002dspeak.html#dtk_002dset_002dnext_002dlanguage"
                       name=
-                      "toc-dtk_002dset_002dnext_002dlanguage">12.5.1.11
+                      "toc-dtk_002dset_002dnext_002dlanguage">12.5.1.12
                       dtk-set-next-language</a></li>
                       <li><a id=
                       "toc-dtk_002dset_002dpredefined_002dspeech_002drate"
@@ -620,27 +626,27 @@
                       "dtk_002dspeak.html#dtk_002dset_002dpredefined_002dspeech_002drate"
                       name=
                       "toc-dtk_002dset_002dpredefined_002dspeech_002drate">
-                      12.5.1.12
+                      12.5.1.13
                       dtk-set-predefined-speech-rate</a></li>
                       <li><a id=
                       "toc-dtk_002dset_002dpreferred_002dlanguage"
                       href=
                       "dtk_002dspeak.html#dtk_002dset_002dpreferred_002dlanguage"
                       name=
-                      "toc-dtk_002dset_002dpreferred_002dlanguage">12.5.1.13
+                      "toc-dtk_002dset_002dpreferred_002dlanguage">12.5.1.14
                       dtk-set-preferred-language</a></li>
                       <li><a id=
                       "toc-dtk_002dset_002dprevious_002dlanguage"
                       href=
                       "dtk_002dspeak.html#dtk_002dset_002dprevious_002dlanguage"
                       name=
-                      "toc-dtk_002dset_002dprevious_002dlanguage">12.5.1.14
+                      "toc-dtk_002dset_002dprevious_002dlanguage">12.5.1.15
                       dtk-set-previous-language</a></li>
                       <li><a id="toc-dtk_002dset_002dpunctuations"
                       href=
                       "dtk_002dspeak.html#dtk_002dset_002dpunctuations"
                       name=
-                      "toc-dtk_002dset_002dpunctuations">12.5.1.15
+                      "toc-dtk_002dset_002dpunctuations">12.5.1.16
                       dtk-set-punctuations</a></li>
                       <li><a id=
                       "toc-dtk_002dset_002dpunctuations_002dto_002dall"
@@ -648,7 +654,7 @@
                       "dtk_002dspeak.html#dtk_002dset_002dpunctuations_002dto_002dall"
                       name=
                       "toc-dtk_002dset_002dpunctuations_002dto_002dall">
-                      12.5.1.16
+                      12.5.1.17
                       dtk-set-punctuations-to-all</a></li>
                       <li><a id=
                       "toc-dtk_002dset_002dpunctuations_002dto_002dsome"
@@ -656,19 +662,19 @@
                       "dtk_002dspeak.html#dtk_002dset_002dpunctuations_002dto_002dsome"
                       name=
                       "toc-dtk_002dset_002dpunctuations_002dto_002dsome">
-                      12.5.1.17
+                      12.5.1.18
                       dtk-set-punctuations-to-some</a></li>
                       <li><a id="toc-dtk_002dset_002drate" href=
                       "dtk_002dspeak.html#dtk_002dset_002drate"
-                      name="toc-dtk_002dset_002drate">12.5.1.18
+                      name="toc-dtk_002dset_002drate">12.5.1.19
                       dtk-set-rate</a></li>
                       <li><a id="toc-dtk_002dstop" href=
                       "dtk_002dspeak.html#dtk_002dstop" name=
-                      "toc-dtk_002dstop">12.5.1.19
+                      "toc-dtk_002dstop">12.5.1.20
                       dtk-stop</a></li>
                       <li><a id="toc-dtk_002dtoggle_002dcaps" href=
                       "dtk_002dspeak.html#dtk_002dtoggle_002dcaps"
-                      name="toc-dtk_002dtoggle_002dcaps">12.5.1.20
+                      name="toc-dtk_002dtoggle_002dcaps">12.5.1.21
                       dtk-toggle-caps</a></li>
                       <li><a id=
                       "toc-dtk_002dtoggle_002dpunctuation_002dmode"
@@ -676,11 +682,11 @@
                       "dtk_002dspeak.html#dtk_002dtoggle_002dpunctuation_002dmode"
                       name=
                       "toc-dtk_002dtoggle_002dpunctuation_002dmode">
-                      12.5.1.21
+                      12.5.1.22
                       dtk-toggle-punctuation-mode</a></li>
                       <li><a id="toc-dtk_002dtoggle_002dquiet"
                       href="dtk_002dspeak.html#dtk_002dtoggle_002dquiet"
-                      name="toc-dtk_002dtoggle_002dquiet">12.5.1.22
+                      name="toc-dtk_002dtoggle_002dquiet">12.5.1.23
                       dtk-toggle-quiet</a></li>
                       <li><a id=
                       "toc-dtk_002dtoggle_002dspeak_002dnonprinting_002dchars"
@@ -688,13 +694,13 @@
                       "dtk_002dspeak.html#dtk_002dtoggle_002dspeak_002dnonprinting_002dchars"
                       name=
                       "toc-dtk_002dtoggle_002dspeak_002dnonprinting_002dchars">
-                      12.5.1.23
+                      12.5.1.24
                       dtk-toggle-speak-nonprinting-chars</a></li>
                       <li><a id=
                       "toc-dtk_002dtoggle_002dsplit_002dcaps" href=
                       "dtk_002dspeak.html#dtk_002dtoggle_002dsplit_002dcaps"
                       name=
-                      "toc-dtk_002dtoggle_002dsplit_002dcaps">12.5.1.24
+                      "toc-dtk_002dtoggle_002dsplit_002dcaps">12.5.1.25
                       dtk-toggle-split-caps</a></li>
                       <li><a id=
                       "toc-dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace"
@@ -702,21 +708,21 @@
                       "dtk_002dspeak.html#dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace"
                       name=
                       "toc-dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace">
-                      12.5.1.25
+                      12.5.1.26
                       dtk-toggle-splitting-on-white-space</a></li>
                       <li><a id=
                       "toc-dtk_002dtoggle_002dstrip_002doctals"
                       href=
                       "dtk_002dspeak.html#dtk_002dtoggle_002dstrip_002doctals"
                       name=
-                      "toc-dtk_002dtoggle_002dstrip_002doctals">12.5.1.26
+                      "toc-dtk_002dtoggle_002dstrip_002doctals">12.5.1.27
                       dtk-toggle-strip-octals</a></li>
                       <li><a id=
                       "toc-dtk_002dunicode_002dcustomize_002dchar"
                       href=
                       "dtk_002dspeak.html#dtk_002dunicode_002dcustomize_002dchar"
                       name=
-                      "toc-dtk_002dunicode_002dcustomize_002dchar">12.5.1.27
+                      "toc-dtk_002dunicode_002dcustomize_002dchar">12.5.1.28
                       dtk-unicode-customize-char</a></li>
                       <li><a id=
                       "toc-dtk_002dunicode_002duncustomize_002dchar"
@@ -724,17 +730,17 @@
                       "dtk_002dspeak.html#dtk_002dunicode_002duncustomize_002dchar"
                       name=
                       "toc-dtk_002dunicode_002duncustomize_002dchar">
-                      12.5.1.28
+                      12.5.1.29
                       dtk-unicode-uncustomize-char</a></li>
                       <li><a id="toc-tts_002drestart" href=
                       "dtk_002dspeak.html#tts_002drestart" name=
-                      "toc-tts_002drestart">12.5.1.29
+                      "toc-tts_002drestart">12.5.1.30
                       tts-restart</a></li>
                       <li><a id="toc-tts_002dspeak_002dversion"
                       href=
                       "dtk_002dspeak.html#tts_002dspeak_002dversion"
                       name=
-                      "toc-tts_002dspeak_002dversion">12.5.1.30
+                      "toc-tts_002dspeak_002dversion">12.5.1.31
                       tts-speak-version</a></li>
                     </ul>
                   </li>
