--- a/manual/Emacspeak-Commands-And-Options.html
+++ b/manual/Emacspeak-Commands-And-Options.html
@@ -98,7 +98,7 @@
     "Emacs Web Wowser">EWW</acronym>), read the <acronym title=
     "Emacs Web Wowser">EWW</acronym> documentation, then read See
     <a href="emacspeak_002deww.html">emacspeak-eww</a>.</p>
-    <p>This chapter documents a total of 1171 commands and 148
+    <p>This chapter documents a total of 1172 commands and 148
     options.</p>
     <ul class="section-toc">
       <li><a href="amixer.html" accesskey="1">amixer</a></li>
@@ -481,6 +481,7 @@
       <li><a href="ladspa.html">ladspa</a></li>
       <li><a href="light.html">light</a></li>
       <li><a href="mac_002dvoices.html">mac-voices</a></li>
+      <li><a href="omaps.html">omaps</a></li>
       <li><a href="outloud_002dvoices.html">outloud-voices</a></li>
       <li><a href="plain_002dvoices.html">plain-voices</a></li>
       <li><a href="soundscape.html">soundscape</a></li>
