--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dsuper_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dsuper_002dkeymap.html
@@ -122,6 +122,10 @@
       <dd>
         <p>emacspeak-wizards-google-news</p>
       </dd>
+      <dt><span><kbd>o</kbd></span></dt>
+      <dd>
+        <p>org-mode</p>
+      </dd>
       <dt><span><kbd>p</kbd></span></dt>
       <dd>
         <p>proced</p>
