--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -63,7 +63,7 @@
     </div>
     <hr />
     <span id="URL-Templates-1"></span>
-    <h3 class="section">12.236 URL Templates</h3>
+    <h3 class="section">12.237 URL Templates</h3>
     <p>This section documents a total of 73 URL Templates.</p>
     <p>All of these URL templates can be invoked via command
     <kbd>M-x emacspeak-url-template-fetch</kbd> normally bound to
@@ -142,6 +142,10 @@
         of the form goog:us</p>
       </li>
       <li>
+        <b>Business Headlines From CNN</b>
+        <p>Money Headlines From CNN</p>
+      </li>
+      <li>
         <b>CIA World Fact Book</b>
         <p>Open CIA World Fact Book For Specified Country.</p>
       </li>
@@ -150,16 +154,16 @@
         <p>Play CNBC Using EAF</p>
       </li>
       <li>
-        <b>CNN Content</b>
-        <p>Filter down to CNN content area.</p>
-      </li>
-      <li>
         <b>CNN Headlines</b>
         <p>News Headlines From CNN</p>
       </li>
       <li>
-        <b>CNN Market Data</b>
-        <p>Market data filtered from CNN Money</p>
+        <b>CNN Money</b>
+        <p>CNN Business Headlines</p>
+      </li>
+      <li>
+        <b>CNN World</b>
+        <p>CNN World</p>
       </li>
       <li>
         <b>Cricinfo Print</b>
@@ -240,10 +244,6 @@
       <li>
         <b>MLB standings</b>
         <p>Display MLB standings.</p>
-      </li>
-      <li>
-        <b>Money Headlines From CNN</b>
-        <p>Money Headlines From CNN</p>
       </li>
       <li>
         <b>NBA standings</b>
