--- a/manual/emacspeak_002dkeymap.html
+++ b/manual/emacspeak_002dkeymap.html
@@ -223,7 +223,7 @@
           emacspeak-org-capture-link) (l
           emacspeak-wizards-locate-content) (m
           emacspeak-wizards-view-buffers-filtered-by-this-mode) (n
-          emacspeak-wizards-google-news) (p proced) (r
+          emacspeak-wizards-google-news) (o org-mode) (p proced) (r
           soundscape-restart) (s soundscape) (t soundscape-toggle)
           (u soundscape-update-mood) (y
           emacspeak-mpv-play-url))</tt></code></p>
