--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -3372,7 +3372,7 @@ current local  value to the result.
           <p>Format string that specifies how the time should be
           spoken. See the documentation for function
           ‘format-time-string’</p>
-          <p>Default Value: <code><tt>%H:%M on %A, %B %_e,
+          <p>Default Value: <code><tt>%k %M on %A, %B %_e,
           %Y</tt></code></p>
         </dd>
       </dl>
