--- a/manual/mac_002dvoices.html
+++ b/manual/mac_002dvoices.html
@@ -25,8 +25,7 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="outloud_002dvoices.html" rel="next" title=
-  "outloud-voices" />
+  <link href="omaps.html" rel="next" title="omaps" />
   <link href="light.html" rel="prev" title="light" />
   <style type="text/css">
   /*<![CDATA[*/
@@ -55,9 +54,9 @@
 <body lang="en" xml:lang="en">
   <div class="section" id="mac_002dvoices">
     <div class="header">
-      <p>Next: <a href="outloud_002dvoices.html" accesskey="n" rel=
-      "next">outloud-voices</a>, Previous: <a href="light.html"
-      accesskey="p" rel="prev">light</a>, Up: <a href=
+      <p>Next: <a href="omaps.html" accesskey="n" rel=
+      "next">omaps</a>, Previous: <a href="light.html" accesskey=
+      "p" rel="prev">light</a>, Up: <a href=
       "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
       "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
       "index.html#SEC_Contents" title="Table of contents" rel=
