--- a/manual/outloud_002dvoices.html
+++ b/manual/outloud_002dvoices.html
@@ -27,7 +27,7 @@
   "Emacspeak Commands And Options" />
   <link href="plain_002dvoices.html" rel="next" title=
   "plain-voices" />
-  <link href="mac_002dvoices.html" rel="prev" title="mac-voices" />
+  <link href="omaps.html" rel="prev" title="omaps" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -56,9 +56,8 @@
   <div class="section" id="outloud_002dvoices">
     <div class="header">
       <p>Next: <a href="plain_002dvoices.html" accesskey="n" rel=
-      "next">plain-voices</a>, Previous: <a href=
-      "mac_002dvoices.html" accesskey="p" rel=
-      "prev">mac-voices</a>, Up: <a href=
+      "next">plain-voices</a>, Previous: <a href="omaps.html"
+      accesskey="p" rel="prev">omaps</a>, Up: <a href=
       "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
       "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
       "index.html#SEC_Contents" title="Table of contents" rel=
@@ -67,7 +66,7 @@
     </div>
     <hr />
     <span id="outloud_002dvoices-1"></span>
-    <h3 class="section">12.226 outloud-voices</h3>
+    <h3 class="section">12.227 outloud-voices</h3>
     <p>Interface to outloud server. This module is IBM ViaVoice
     Outloud specific.</p>
     <ul class="section-toc">
@@ -77,12 +76,12 @@
       "2">outloud-voices Options</a></li>
     </ul>
     <div class="subsection" id="Outloud_002dVoices-Commands">
-      <h4 class="subsection">12.226.1 Outloud-Voices Commands</h4>
+      <h4 class="subsection">12.227.1 Outloud-Voices Commands</h4>
       <ul class="section-toc">
         <li><a href="#outloud" accesskey="1">outloud</a></li>
       </ul>
       <div class="subsubsection" id="outloud">
-        <h4 class="subsubsection">12.226.1.1 outloud</h4>
+        <h4 class="subsubsection">12.227.1.1 outloud</h4>
         <dl class="def">
           <dt id="index-outloud"><span class=
           "category">Command:</span> <span><strong>outloud</strong>
@@ -109,7 +108,7 @@
       </div>
     </div>
     <div class="subsection" id="outloud_002dvoices-Options">
-      <h4 class="subsection">12.226.2 outloud-voices Options</h4>
+      <h4 class="subsection">12.227.2 outloud-voices Options</h4>
       <dl class="def">
         <dt id="index-User-Option-115"><span class=
         "category">Variable:</span> <span><strong>User
