--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -86,16 +86,15 @@
         "4">dtk-notify-initialize</a></li>
         <li><a href="#dtk_002dnotify_002dstop" accesskey=
         "5">dtk-notify-stop</a></li>
-        <li><a href="#dtk_002dorg_002dfold_002dmode" accesskey=
-        "6">dtk-org-fold-mode</a></li>
         <li><a href="#dtk_002dreset_002dstate" accesskey=
-        "7">dtk-reset-state</a></li>
+        "6">dtk-reset-state</a></li>
         <li><a href="#dtk_002dselect_002dserver" accesskey=
-        "8">dtk-select-server</a></li>
+        "7">dtk-select-server</a></li>
         <li><a href="#dtk_002dset_002dcharacter_002dscale"
-        accesskey="9">dtk-set-character-scale</a></li>
+        accesskey="8">dtk-set-character-scale</a></li>
         <li><a href=
-        "#dtk_002dset_002dchunk_002dseparator_002dsyntax">dtk-set-chunk-separator-syntax</a></li>
+        "#dtk_002dset_002dchunk_002dseparator_002dsyntax"
+        accesskey="9">dtk-set-chunk-separator-syntax</a></li>
         <li><a href=
         "#dtk_002dset_002dlanguage">dtk-set-language</a></li>
         <li><a href=
@@ -281,32 +280,8 @@ program. Port defaults to dtk-local-server-port
           </dd>
         </dl>
       </div>
-      <div class="subsubsection" id=
-      "dtk_002dorg_002dfold_002dmode">
-        <h4 class="subsubsection">12.5.1.6 dtk-org-fold-mode</h4>
-        <dl class="def">
-          <dt id="index-dtk_002dorg_002dfold_002dmode"><span class=
-          "category">Command:</span>
-          <span><strong>dtk-org-fold-mode</strong> <a href=
-          '#index-dtk_002dorg_002dfold_002dmode' class=
-          'copiable-anchor'>¶</a></span></dt>
-          <dd>
-            <span id=
-            "index-dtk_002dorg_002dfold_002dmode-1"></span>
-            <div class="format">
-              <pre class="format">Org fold magic.
-
-In addition to any hooks its parent mode ‘outline-mode’ might have
-run, this mode runs the hook ‘dtk-org-fold-mode-hook’, as the final or
-penultimate step during initialization.
-
-</pre>
-            </div>
-          </dd>
-        </dl>
-      </div>
       <div class="subsubsection" id="dtk_002dreset_002dstate">
-        <h4 class="subsubsection">12.5.1.7 dtk-reset-state</h4>
+        <h4 class="subsubsection">12.5.1.6 dtk-reset-state</h4>
         <dl class="def">
           <dt id="index-dtk_002dreset_002dstate"><span class=
           "category">Command:</span>
@@ -330,7 +305,7 @@ penultimate step during initialization.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dselect_002dserver">
-        <h4 class="subsubsection">12.5.1.8 dtk-select-server</h4>
+        <h4 class="subsubsection">12.5.1.7 dtk-select-server</h4>
         <dl class="def">
           <dt id="index-dtk_002dselect_002dserver-1"><span class=
           "category">Command:</span>
@@ -360,7 +335,7 @@ penultimate step during initialization.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dcharacter_002dscale">
-        <h4 class="subsubsection">12.5.1.9
+        <h4 class="subsubsection">12.5.1.8
         dtk-set-character-scale</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dcharacter_002dscale-1">
@@ -394,7 +369,7 @@ then set the current local value to the result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dchunk_002dseparator_002dsyntax">
-        <h4 class="subsubsection">12.5.1.10
+        <h4 class="subsubsection">12.5.1.9
         dtk-set-chunk-separator-syntax</h4>
         <dl class="def">
           <dt id=
@@ -427,7 +402,7 @@ Argument S specifies the syntax class.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dset_002dlanguage">
-        <h4 class="subsubsection">12.5.1.11 dtk-set-language</h4>
+        <h4 class="subsubsection">12.5.1.10 dtk-set-language</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dlanguage"><span class=
           "category">Command:</span>
@@ -458,7 +433,7 @@ Argument S specifies the syntax class.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dnext_002dlanguage">
-        <h4 class="subsubsection">12.5.1.12
+        <h4 class="subsubsection">12.5.1.11
         dtk-set-next-language</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dnext_002dlanguage">
@@ -485,7 +460,7 @@ Argument S specifies the syntax class.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dpredefined_002dspeech_002drate">
-        <h4 class="subsubsection">12.5.1.13
+        <h4 class="subsubsection">12.5.1.12
         dtk-set-predefined-speech-rate</h4>
         <dl class="def">
           <dt id=
@@ -574,7 +549,7 @@ rate = dtk-speech-rate-base + dtk-speech-rate-step * level.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dpreferred_002dlanguage">
-        <h4 class="subsubsection">12.5.1.14
+        <h4 class="subsubsection">12.5.1.13
         dtk-set-preferred-language</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dpreferred_002dlanguage">
@@ -597,7 +572,7 @@ rate = dtk-speech-rate-base + dtk-speech-rate-step * level.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dprevious_002dlanguage">
-        <h4 class="subsubsection">12.5.1.15
+        <h4 class="subsubsection">12.5.1.14
         dtk-set-previous-language</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dprevious_002dlanguage">
@@ -623,7 +598,7 @@ rate = dtk-speech-rate-base + dtk-speech-rate-step * level.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dset_002dpunctuations">
-        <h4 class="subsubsection">12.5.1.16
+        <h4 class="subsubsection">12.5.1.15
         dtk-set-punctuations</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dpunctuations-1">
@@ -656,7 +631,7 @@ current local  value to the result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dpunctuations_002dto_002dall">
-        <h4 class="subsubsection">12.5.1.17
+        <h4 class="subsubsection">12.5.1.16
         dtk-set-punctuations-to-all</h4>
         <dl class="def">
           <dt id=
@@ -681,7 +656,7 @@ Interactive PREFIX arg sets punctuation mode globally.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dpunctuations_002dto_002dsome">
-        <h4 class="subsubsection">12.5.1.18
+        <h4 class="subsubsection">12.5.1.17
         dtk-set-punctuations-to-some</h4>
         <dl class="def">
           <dt id=
@@ -705,7 +680,7 @@ Interactive PREFIX arg sets punctuation mode globally.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dset_002drate">
-        <h4 class="subsubsection">12.5.1.19 dtk-set-rate</h4>
+        <h4 class="subsubsection">12.5.1.18 dtk-set-rate</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002drate-1"><span class=
           "category">Command:</span>
@@ -734,7 +709,7 @@ current local  value to the result.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dstop">
-        <h4 class="subsubsection">12.5.1.20 dtk-stop</h4>
+        <h4 class="subsubsection">12.5.1.19 dtk-stop</h4>
         <dl class="def">
           <dt id="index-dtk_002dstop-1"><span class=
           "category">Command:</span>
@@ -762,7 +737,7 @@ notification stream as well.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dtoggle_002dcaps">
-        <h4 class="subsubsection">12.5.1.21 dtk-toggle-caps</h4>
+        <h4 class="subsubsection">12.5.1.20 dtk-toggle-caps</h4>
         <dl class="def">
           <dt id="index-dtk_002dtoggle_002dcaps-1"><span class=
           "category">Command:</span>
@@ -779,11 +754,9 @@ notification stream as well.
               'copiable-anchor'>¶</a></span></dt>
             </dl><span id="index-dtk_002dtoggle_002dcaps-2"></span>
             <div class="format">
-              <pre class="format">Toggle caps.
-when set, capitalized words are preceded by a short ‘cap’, and
-upper-case words are preceded by a ‘ac’ spoken in a lower voice.
-Interactive PREFIX arg means toggle the global default value, and
-then set the current local value to the result.
+              <pre class="format">Toggle dtk-caps.
+Interactive PREFIX arg means toggle the global default
+value, and then set the current local value to the result.
 </pre>
             </div>
           </dd>
@@ -791,7 +764,7 @@ then set the current local value to the result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dtoggle_002dpunctuation_002dmode">
-        <h4 class="subsubsection">12.5.1.22
+        <h4 class="subsubsection">12.5.1.21
         dtk-toggle-punctuation-mode</h4>
         <dl class="def">
           <dt id="index-dtk_002dtoggle_002dpunctuation_002dmode">
@@ -823,7 +796,7 @@ Interactive PREFIX arg makes the new setting global.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dtoggle_002dquiet">
-        <h4 class="subsubsection">12.5.1.23 dtk-toggle-quiet</h4>
+        <h4 class="subsubsection">12.5.1.22 dtk-toggle-quiet</h4>
         <dl class="def">
           <dt id="index-dtk_002dtoggle_002dquiet-1"><span class=
           "category">Command:</span>
@@ -852,7 +825,7 @@ prefix arg causes this setting to become global.
       </div>
       <div class="subsubsection" id=
       "dtk_002dtoggle_002dspeak_002dnonprinting_002dchars">
-        <h4 class="subsubsection">12.5.1.24
+        <h4 class="subsubsection">12.5.1.23
         dtk-toggle-speak-nonprinting-chars</h4>
         <dl class="def">
           <dt id=
@@ -883,7 +856,7 @@ value, and then set the current local value to the result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dtoggle_002dsplit_002dcaps">
-        <h4 class="subsubsection">12.5.1.25
+        <h4 class="subsubsection">12.5.1.24
         dtk-toggle-split-caps</h4>
         <dl class="def">
           <dt id="index-dtk_002dtoggle_002dsplit_002dcaps-1">
@@ -915,7 +888,7 @@ result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace">
-        <h4 class="subsubsection">12.5.1.26
+        <h4 class="subsubsection">12.5.1.25
         dtk-toggle-splitting-on-white-space</h4>
         <dl class="def">
           <dt id=
@@ -946,7 +919,7 @@ result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dtoggle_002dstrip_002doctals">
-        <h4 class="subsubsection">12.5.1.27
+        <h4 class="subsubsection">12.5.1.26
         dtk-toggle-strip-octals</h4>
         <dl class="def">
           <dt id="index-dtk_002dtoggle_002dstrip_002doctals">
@@ -977,7 +950,7 @@ value to the result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dunicode_002dcustomize_002dchar">
-        <h4 class="subsubsection">12.5.1.28
+        <h4 class="subsubsection">12.5.1.27
         dtk-unicode-customize-char</h4>
         <dl class="def">
           <dt id="index-dtk_002dunicode_002dcustomize_002dchar">
@@ -1003,7 +976,7 @@ When called interactively, CHAR defaults to the character after point.
       </div>
       <div class="subsubsection" id=
       "dtk_002dunicode_002duncustomize_002dchar">
-        <h4 class="subsubsection">12.5.1.29
+        <h4 class="subsubsection">12.5.1.28
         dtk-unicode-uncustomize-char</h4>
         <dl class="def">
           <dt id="index-dtk_002dunicode_002duncustomize_002dchar">
@@ -1028,7 +1001,7 @@ When called interactively, CHAR defaults to the character after point.
         </dl>
       </div>
       <div class="subsubsection" id="tts_002drestart">
-        <h4 class="subsubsection">12.5.1.30 tts-restart</h4>
+        <h4 class="subsubsection">12.5.1.29 tts-restart</h4>
         <dl class="def">
           <dt id="index-tts_002drestart"><span class=
           "category">Command:</span>
@@ -1053,7 +1026,7 @@ When called interactively, CHAR defaults to the character after point.
         </dl>
       </div>
       <div class="subsubsection" id="tts_002dspeak_002dversion">
-        <h4 class="subsubsection">12.5.1.31 tts-speak-version</h4>
+        <h4 class="subsubsection">12.5.1.30 tts-speak-version</h4>
         <dl class="def">
           <dt id="index-tts_002dspeak_002dversion-1"><span class=
           "category">Command:</span>
