--- a/announcements/aster-math.html
+++ b/announcements/aster-math.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-12-20 Tue 20:21 -->
+<!-- 2022-12-20 Tue 14:10 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>AsTeR: Spoken Math On The Emacspeak Audio Desktop</title>
@@ -198,24 +198,49 @@
 <body>
 <div id="content" class="content">
 <h1 class="title">AsTeR: Spoken Math On The Emacspeak Audio Desktop</h1>
-<div id="outline-container-org4690d56" class="outline-2">
-<h2 id="org4690d56"><span class="section-number-2">1.</span> Dedication</h2>
+<div id="outline-container-org7428d59" class="outline-2">
+<h2 id="org7428d59"><span class="section-number-2">1.</span> Dedication</h2>
 <div class="outline-text-2" id="text-1">
+<div class="org-center">
 <p>
-#+begin<sub>center</sub>
 To My Guiding Eyes
-#+end<sub>center</sub>
 </p>
+</div>
 
 <p>
 In fond memory of <a href="http://emacspeak.sf.net/raman/aster-labrador">Aster</a> who first showed the way for 10 years; to <a href="http://emacspeak.sf.net/raman/hubbell-labrador">Hubbell</a> and
 <a href="http://emacspeak.sf.net/raman/tilden-labrador">Tilden</a> who ably followed her lead over the next 22+ years!
 </p>
+
+<table>
+<tr><td colspan="3">On The Internet</td></tr>
+        <tr>
+          <td><strong>No one knows you're not a dog!</strong></td>
+          <td><strong>Nor  if you're the same dog!</strong></td>
+          <td><strong>Or even the same gender!</strong></td>
+        </tr>
+        <tr>
+          <td><a href="aster-labrador/">
+                <img src="aster-labrador/aster-geb-graduation.jpg"
+                     alt="Aster Labrador" width="150" height="216" /></a>
+ <br/>(2/15/1987—12/05/1999)</td>
+            <td><a href="hubbell-labrador/">
+                  <img
+                      src="hubbell-labrador/hubbell-and-raman.jpg" width="150" height="216"
+                      alt=" Hubbell Labrador" /></a>
+<br/>(12/21/1997—4/11/2011)</td>
+              <td><a href="tilden-labrador/">
+                    <img src="tilden-labrador/raman-and-tilden-geb.jpg"
+                         alt="Tilden Labrador" width="150"
+                         height="216" /></a>
+<br/>(8/4/2009—9/3/2022)</td>
+        </tr>
+      </table>
 </div>
 </div>
 
-<div id="outline-container-org086f679" class="outline-2">
-<h2 id="org086f679"><span class="section-number-2">2.</span> Overview</h2>
+<div id="outline-container-org86c9bc8" class="outline-2">
+<h2 id="org86c9bc8"><span class="section-number-2">2.</span> Overview</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 The work describing Audio System For Technical Readings <a href="https://emacspeak.sourceforge.net/raman/aster/abstract.html">(AsTeR)</a> was
@@ -226,8 +251,8 @@ is an updated version of AsTeR that uses the Software DECTalk.
 </div>
 </div>
 
-<div id="outline-container-org52711ad" class="outline-2">
-<h2 id="org52711ad"><span class="section-number-2">3.</span> Implementation</h2>
+<div id="outline-container-org30a965c" class="outline-2">
+<h2 id="org30a965c"><span class="section-number-2">3.</span> Implementation</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>AsTeR <i>audio-formats</i>  <b>TeX</b> and <b>LaTeX</b> documents.</li>
@@ -239,8 +264,8 @@ is an updated version of AsTeR that uses the Software DECTalk.
 </div>
 </div>
 
-<div id="outline-container-org30bb9bd" class="outline-2">
-<h2 id="org30bb9bd"><span class="section-number-2">4.</span> Prerequisites</h2>
+<div id="outline-container-org8b54678" class="outline-2">
+<h2 id="org8b54678"><span class="section-number-2">4.</span> Prerequisites</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>Install Emacspeak 57.0 or later from Github.</li>
@@ -251,8 +276,8 @@ is an updated version of AsTeR that uses the Software DECTalk.
 </div>
 </div>
 
-<div id="outline-container-orgd4adec4" class="outline-2">
-<h2 id="orgd4adec4"><span class="section-number-2">5.</span> Building AsTeR</h2>
+<div id="outline-container-org10a0b30" class="outline-2">
+<h2 id="org10a0b30"><span class="section-number-2">5.</span> Building AsTeR</h2>
 <div class="outline-text-2" id="text-5">
 <ol class="org-ol">
 <li><code>cd</code> &lt;emacspeak&gt; to change to your <code>emacspeak</code> directory.</li>
@@ -262,8 +287,8 @@ is an updated version of AsTeR that uses the Software DECTalk.
 </div>
 </div>
 
-<div id="outline-container-orgadd156b" class="outline-2">
-<h2 id="orgadd156b"><span class="section-number-2">6.</span> Usage</h2>
+<div id="outline-container-org42bfb20" class="outline-2">
+<h2 id="org42bfb20"><span class="section-number-2">6.</span> Usage</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>Add directory <code>aster-math/ui/</code> to your Emacs <code>load-path</code>.</li>
@@ -288,8 +313,8 @@ browser to move around.</li>
 </div>
 </div>
 
-<div id="outline-container-org396952a" class="outline-2">
-<h2 id="org396952a"><span class="section-number-2">7.</span> References</h2>
+<div id="outline-container-orgd061514" class="outline-2">
+<h2 id="orgd061514"><span class="section-number-2">7.</span> References</h2>
 <div class="outline-text-2" id="text-7">
 <ol class="org-ol">
 <li><a href="https://emacspeak.sourceforge.net/raman/aster/2022-aster.ogg">Demo recorded in October 2022</a>.</li>
@@ -307,7 +332,7 @@ browser to move around.</li>
 <div id="postamble" class="status">
 <p class="date">Date: 2022-11-28 Mon 00:00</p>
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2022-12-20 Tue 20:21</p>
+<p class="date">Created: 2022-12-20 Tue 14:10</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
